--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.4.1",
     "@astrojs/react": "^3.0.9",
     "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.3.0",
     "@fontsource-variable/jost": "^5.0.17",
     "@fontsource-variable/open-sans": "^5.0.23",
     "@types/react": "^18.2.55",
